# nosql-navigate

./: .gitignore  README.md  package.json  splashscreen.html  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: navigateDb.db  navigateDb.db-journal
src-tauri/src/: main.rs
src-tauri/src/models/: dtos.rs  errors.rs  mod.rs
src-tauri/src/services/: mod.rs  mongo_service.rs  sql_lite_service.rs
src/components/AggregationPipelineEditor/: AggregationPipelineEditor.vue
src/components/AggregationResult/: AggregationResult.vue
src/components/CollectionCRUD/: CollectionCRUD.vue
src/components/CollectionFilter/: CollectionFilter.vue
src/components/CollectionTabs/: CollectionTabs.vue
src/components/Common/: GenericSkeleton.vue
src/components/ConnectionInterface/: ConnectionInterface.vue  NewConnection.vue  SavedConnections.vue
src/components/Dashboard/: HomePage.vue
src/components/DashboardInterface/: ConnectionDatabases.vue  DashboardInterface.vue  DatabaseStats.vue
src/components/DatabasesNavigation/: DatabasesNavigation.vue
src/components/DatabasesSummary/: DatabasesSummary.vue
src/components/DocumentList/: DocumentList.vue
src/components/DocumentOperations/: DocumentOperations.vue
src/components/DocumentsAggregation/: DocumentsAggregation.vue
src/helpers/: ObjectKeys.ts  object-keys.ts
src/json-themes/: night-owl.scss  one-dark.scss
src/router/: index.ts
src/services/: aggregation-builder-service.ts  collections-documents-service.ts  custom-linq-service.ts  document-filter-service.ts  ejson-service.ts  naive-ui-service.ts  store-service.ts
src/stores/: aggregation-result-fields.ts  aggregation-result.ts  collection-documents.ts  collection-tabs.ts  connection-crud-events.ts  connection-events.ts  crud-events.ts  db-collections.ts  document-fields.ts  documents-count.ts  import-export-events.ts  operation-summary.ts  refresh-events.ts  tab-data.ts
src/utilities/: common-consts.ts  object-keys.ts
(+70 files in other folders)
