[package]
name = "nosql-navigate"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
mongodb = "2.8.1"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.57"
futures = "0.3.30"
chrono = "0.4.34"
uuid = { version = "1.7.0", features = ["v4"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri = { version = "1.6.1", features = ["dialog-open", "dialog-save", "shell-open"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
